CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(MAIN)

ADD_DEFINITIONS(-std=c++11)

# ADD_DEFINITIONS(-g -ggdb)

SET(CMAKE_BUILD_TYPE "Release")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGES} -O3")

AUX_SOURCE_DIRECTORY(. DIR_SRCS)

ADD_EXECUTABLE(code-comment ${DIR_SRCS})

TARGET_LINK_LIBRARIES(code-comment boost_regex)