CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(FILE_TRANSFER)

ADD_DEFINITIONS(-std=c++11)

ADD_DEFINITIONS(-g -ggdb)

ADD_DEFINITIONS(-Wall)

AUX_SOURCE_DIRECTORY(. DIR_SRCS)

FIND_PACKAGE (Threads)

ADD_EXECUTABLE(file_transfer ${DIR_SRCS})

TARGET_LINK_LIBRARIES(file_transfer ${CMAKE_THREAD_LIBS_INIT})

TARGET_LINK_LIBRARIES(file_transfer zmq)